--- a/css/footer.css
+++ b/css/footer.css
@@ -54,3 +54,39 @@
   width: 20px;
   margin-right: 5px;
 }
+
+@media (max-width: 500px) {
+  #footer {
+    padding: 30px 0;
+  }
+
+  .footer-content {
+    padding: 0 10px;
+    margin-bottom: 30px;
+  }
+
+  .footer-content p:first-child {
+    font-size: 12px;
+  }
+
+  .footer-content p:last-child {
+    font-size: 8px;
+  }
+
+  .footer-contact {
+    padding: 10px;
+  }
+
+  .social-contact div {
+    margin: 0 10px;
+  }
+
+  .social-contact div a {
+    font-size: 5px;
+  }
+
+  .social-contact div img {
+    width: 10px;
+    margin-right: 5px;
+}
+}
