--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,18 @@
   margin: 15px 60px;
 }
 
+.toggle {
+  display: none;
+}
+
+.toggle span {
+  width: 20px;
+  height: 3px;
+  background-color: #321A02;
+  margin-bottom: 5px;
+  border-radius: 5px;
+}
+
 .menu {
   margin-right: 30px;
 }
@@ -31,4 +43,25 @@
 
 .menu a i {
   color: #FFFE01;
+}
+
+@media (max-width: 1249px) {
+
+  .logo {
+    margin: 15px 20px;
+  }
+
+  .logo img {
+    width: 30%;
+  }
+
+  .toggle {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 20px;
+  }
+
+  .menu {
+    display: none;
+  }
 }
